# aura-botnet

./: .gitignore  .gitmodules  README.md
aura-client/: CMakeLists.txt  aura.cc  bot.cc  sysinfo.cc
aura-server/: .env.template  manage.py  requirements.txt  runserver.sh
aura-server/aura/: settings.py  urls.py  wsgi.py
aura-server/convey/: admin.py  models.py  urls.py
aura-server/convey/migrations/: 0002_bot_command_upload.py
aura-server/convey/views/: cmd.py  register.py
